plugins {
    id 'application'
    id 'checkstyle'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
    id 'com.github.ben-manes.versions' version '0.52.0'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

compileJava {
    options.release = 21
}

application {
    mainClass = 'hexlet.code.App'
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.12.0-RC2')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.0-RC2'
    implementation 'org.apache.commons:commons-lang3:3.17.0'
}

test {
    useJUnitPlatform()
}